--- a/public/index.html
+++ b/public/index.html
@@ -386,6 +386,53 @@
         </div>
         <!-- end of .container-->
       </section>
+      <!-- =============================== -->
+
+      <!-- ========================================== -->
+      <section class="pt-5 pt-md-9" id="service">
+        <div class="container">
+          <div class="position-absolute z-index--1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
+          <div class="mb-7 text-center">
+            <!-- <h5 class="text-secondary">CATEGORY</h5> -->
+            <h3
+              class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize"
+              style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
+            >
+            Perusahaan yang telah merekrut lulusan kami
+            </h3>
+            <p class="fs-2 mb-4 py-5 fw-medium text-center">
+              Lulusan kami telah bekerja di lebih dari 100 perusahaan di seluruh Indonesia.
+            </p>
+          </div>
+          <div class="row  rounded  ">
+            <div class="d-flex justify-content-center align-content-center flex-wrap">
+              <img src="https://asset-niomic.s3.ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-logo-ppm.png" alt="..." class="m-3 image-office" />  
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c_bca_logo+.png" alt="..." class="m-3 image-office"  />  
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-samsung-logo.png" alt="..." class="m-3 image-office "  />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c_logo-adaro-head.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-1200px-Ace_Hardware_Logo.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-btpn-syariah.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-diskominfo-tangerang-logo.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-logo-kompas.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-haistar-logo.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-seiwa-logo.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-logo-kurnia-globalindo.jpg" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-Logo-cannet-1.jpg" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-pt-sanxing.jpg" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-kraftheinz-2.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-logoBPTPNTB19.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-dja-logo+.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-infracom-logo.png" alt="..." class="m-3 image-office" />
+              <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv4/niomic/hlm-testimoni/perusahaan-karir/c-pt-helpio.png" alt="..." class="m-3 image-office" />
+
+            </div>           
+                        
+          </div>
+        </div>
+        <!-- end of .container-->
+    </section>
+      <!-- ========================================== -->
+
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
