--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base align-items-lg-center align-items-start">
               <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#!">Login</a></li>
 
-              <button type="button" class="btn btn-default btn-lg" style="background-color: #f7922e; color: white">Daftar Sekarang</button>
+              <button type="button" class="btn btn-default rounded-pill btn-lg" style="background-color: #f7922e; color: white">Daftar Sekarang</button>
             </ul>
           </div>
         </div>
@@ -59,11 +59,11 @@
                 </a>
               </h1>
               <p class="fs-2 mb-4 fw-medium">
-                Niomic adalah platform untuk belajar pemrograman secara<br class="d-none d-xl-block" />intensif. Kami menghadirkan sistem belajar online yang<br class="d-none d-xl-block" />menyenangkan dengan dibimbing mentor yang
+                Niomic adalah platform untuk belajar pemrograman secara intensif. Kami menghadirkan sistem belajar online yang<br class="d-none d-xl-block" />menyenangkan dengan dibimbing mentor yang
                 berpengalaman.
               </p>
               <div class="text-center text-md-start">
-                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Pelajari Selengkapnya</a>
+                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 rounded-pill border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Pelajari Selengkapnya</a>
                 <div class="w-100 d-block d-md-none"></div>
                 <a href="#!" role="button" data-bs-toggle="modal" data-bs-target="#popupVideo"
                   ><span class="btn btn-danger round-btn-lg rounded-circle me-3 danger-btn-shadow" style="background-color: #df4e39"> <img src="assets/img/hero/play.svg" width="15" alt="paly" /></span></a
@@ -344,10 +344,10 @@
                   class="text-capitalize fs-xl-10"
                   style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
                 >
-                  Testimonials
+                  Testimoni
                 </h1>
-                <p class="fs-2 mb-4 fw-medium">Lulusan kami telah bekerja di lebih dari 100 perusahaan di seluruh Indonesia. Ini cerita sukses<br class="d-none d-xl-block" />dan pengalaman mereka yang sudah belajar di NIOMIC.</p>
-                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Lihat Testimoni</a>
+                <p class="fs-1 mb-4 fw-medium">Lulusan kami telah bekerja di lebih dari 100 perusahaan di seluruh Indonesia. Ini cerita sukses dan pengalaman mereka yang sudah belajar di NIOMIC.</p>
+                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 rounded-pill border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Lihat Testimoni</a>
               </div>
             </div>
             <div class="col-lg-1"></div>
@@ -405,7 +405,7 @@
 
       <!-- ========================================== -->
 
-      <section id="testimonial" style="background-color: #f1f1f1">
+      <section id="alurpendaftaran" style="background-color: #f1f1f1">
         <div class="container">
           <div class="row justify-content-center align-items-center">
             <div class="col-lg-5">
@@ -457,7 +457,7 @@
                 
                   <!-- <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/sistem+belajar/c-akses-materi.png" alt="Icon" class="icon icon-lg" style="width: 30%; height: 20%" /> -->
                     <div class="">
-                      <table class="table table-hover table-borderless">
+                      <table class="table table-hover table-borderless fs-1">
                         <thead>
                           <tr>
                             <th scope="col">Gelombang</th>
@@ -534,15 +534,15 @@
         <div class="container">
           <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-5">
-              <div class="mb-4 text-center">
+              <div class="mb-5 text-center">
                 <h1
-                  class="text-capitalize fs-xl-10"
+                  class="text-capitalize fs-xl-10 mb-7"
                   style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
                 >
                 Daftar dulu aja
                 </h1>
-                <p class="fs-1 mb-5 fw-medium">akan ada banyak manfaat yang akan kamu dapatkan</p>
-                <a class="btn btn-primary btn-lg me-md-4 mb-2 mb-md-0 border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Daftar Sekarang</a>
+                <p class="fs-2 mb-7 fw-medium">akan ada banyak manfaat yang akan kamu dapatkan</p>
+                <a class="btn btn-primary btn-lg me-md-4 mb-5 mb-md-0 border-0 rounded-pill primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Daftar Sekarang</a>
               </div>
             </div>
           </div>
