--- a/public/index.html
+++ b/public/index.html
@@ -58,12 +58,12 @@
                   <span class="wrap"></span>
                 </a>
               </h1>
-              <p class="fs-2 mb-4 fw-medium">
-                Niomic adalah platform untuk belajar pemrograman secara intensif. Kami menghadirkan sistem belajar online yang<br class="d-none d-xl-block" />menyenangkan dengan dibimbing mentor yang
+              <p class="fs-1 mb-4 fw-medium md-3">
+                Niomic adalah platform untuk belajar pemrograman secara intensif. Kami menghadirkan sistem belajar online yangmenyenangkan dengan dibimbing mentor yang
                 berpengalaman.
               </p>
               <div class="text-center text-md-start">
-                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 rounded-pill border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Pelajari Selengkapnya</a>
+                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 rounded-pill border-0 primary-btn-shadow hover" href="#!" role="button" style="background-color: #f7922e; color: white">Pelajari Selengkapnya</a>
                 <div class="w-100 d-block d-md-none"></div>
                 <a href="#!" role="button" data-bs-toggle="modal" data-bs-target="#popupVideo"
                   ><span class="btn btn-danger round-btn-lg rounded-circle me-3 danger-btn-shadow" style="background-color: #df4e39"> <img src="assets/img/hero/play.svg" width="15" alt="paly" /></span></a
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-5 col-lg-6 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 hero-img" src="assets/img/poto-cewe1.png" alt="hero-header" /></div>
+            <div class="col-md-5 col-lg-6 order-0 order-md-1 text-end z-index--1"><img class="pt-7 pt-md-0 hero-img" src="assets/img/poto-cewe1.png" alt="hero-header" /></div>
           </div>
         </div>
       </section>
@@ -103,7 +103,7 @@
             >
               Materi apa saja yang dapat kamu pelajari ?
             </h3>
-            <p class="fs-2 mb-4 py-5 fw-medium text-center">Kamu akan diberi akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru</p>
+            <p class="fs-1 mb-4 py-5 fw-medium text-center">Kamu akan diberi akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru</p>
             <!-- Button trigger modal -->
 
             <!-- Modal -->
@@ -291,37 +291,37 @@
             >
               Bootcamp Pemrograman Intensif
             </h3>
-            <p class="fs-2 mb-4 py-5 fw-medium text-center">
+            <p class="fs-1 mb-4 py-5 fw-medium text-center">
               Mulai dan tingkatkan karirmu sekarang menjadi programmer siap kerja yang skillful meski tanpa basic IT sekalipun. Mulai dari nol hingga expert dengan bimbingan mentor berpengalaman
             </p>
           </div>
           <div class="row justify-content-center">
             <div class="col-lg-3 col-sm-6 mb-6">
-              <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+              <div class="card shadow-lg p-3 mb-5 bg-body rounded hover">
                 <img src="assets/img/niomic/sistem-belajar.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Sistem Belajar</h5>
-                  <p class="card-text">Kami menghadirkan sistem belajar online yang menyenangkan dengan dibimbing mentor yang berpengalaman.</p>
+                  <p class="card-text fs--3">Kami menghadirkan sistem belajar online yang menyenangkan dengan dibimbing mentor yang berpengalaman.</p>
                   <a href="s-belajar.html" class="" style="text-decoration: none; font-weight: bold">Lihat Selengkapnya</a>
                 </div>
               </div>
             </div>
             <div class="col-lg-3 col-sm-6 mb-6">
-              <div class="card shadow p-3 mb-5 bg-body rounded">
+              <div class="card shadow p-3 mb-5 bg-body rounded hover">
                 <img src="assets/img/niomic/c-silabus.png" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Syllabus</h5>
-                  <p class="card-text">Akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru.</p>
+                  <p class="card-text fs--3 text-start">Akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru.</p>
                   <a href="silabus.html" class="" style="text-decoration: none; font-weight: bold">Lihat Selengkapnya</a>
                 </div>
               </div>
             </div>
             <div class="col-lg-3 col-sm-6 mb-6">
-              <div class="card shadow p-3 mb-5 bg-body rounded">
+              <div class="card shadow p-3 mb-5 bg-body rounded hover">
                 <img src="assets/img/niomic/c-keuntungan.png  " class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Keuntungan kamu</h5>
-                  <p class="card-text">Banyak keuntungan eksklusif yang akan kamu dapatkan ketika belajar di niomic, melalui bootcamp pemrograman intensif.</p>
+                  <p class="card-text fs--3">Banyak keuntungan eksklusif yang akan kamu dapatkan ketika belajar di niomic, melalui bootcamp pemrograman intensif.</p>
                   <a href="keuntungan.html" class="" style="text-decoration: none; font-weight: bold">Lihat Selengkapnya</a>
                 </div>
               </div>
@@ -347,13 +347,42 @@
                   Testimoni
                 </h1>
                 <p class="fs-1 mb-4 fw-medium">Lulusan kami telah bekerja di lebih dari 100 perusahaan di seluruh Indonesia. Ini cerita sukses dan pengalaman mereka yang sudah belajar di NIOMIC.</p>
-                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 rounded-pill border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Lihat Testimoni</a>
+                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 rounded-pill border-0 primary-btn-shadow hover" href="#!" role="button" style="background-color: #f7922e; color: white">Lihat Testimoni</a>
               </div>
             </div>
             <div class="col-lg-1"></div>
             <div class="col-lg-6">
               <div class="pe-7 ps-5 ps-lg-0">
-                <div class="text-end"><img class="pt-7 pt-md-0 hero-img" src="assets/img/hp-niomic.png" alt="hero-header" /></div>
+                <div class="text-end">
+                  <!-- <img class="pt-7 pt-md-0 hero-img" src="assets/img/hp-niomic.png" alt="hero-header" /> -->
+                  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <!-- <img src="..." class="d-block w-100" alt="..."> -->
+                        
+                      </div>
+                      <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -542,7 +571,7 @@
                 Daftar dulu aja
                 </h1>
                 <p class="fs-2 mb-7 fw-medium">akan ada banyak manfaat yang akan kamu dapatkan</p>
-                <a class="btn btn-primary btn-lg me-md-4 mb-5 mb-md-0 border-0 rounded-pill primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Daftar Sekarang</a>
+                <a class="btn btn-primary btn-lg me-md-4 mb-5 mb-md-0 border-0 rounded-pill primary-btn-shadow hover" href="#!" role="button" style="background-color: #f7922e; color: white">Daftar Sekarang</a>
               </div>
             </div>
           </div>
