--- a/public/index.html
+++ b/public/index.html
@@ -339,7 +339,7 @@
         <div class="container">
           <div class="row justify-content-center align-items-center">
             <div class="col-lg-5">
-              <div class="mb-8 text-center">
+              <div class="my-5 text-center">
                 <h1
                   class="text-capitalize fs-xl-10"
                   style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
@@ -347,44 +347,18 @@
                   Testimoni
                 </h1>
                 <p class="fs-1 mb-4 fw-medium">Lulusan kami telah bekerja di lebih dari 100 perusahaan di seluruh Indonesia. Ini cerita sukses dan pengalaman mereka yang sudah belajar di NIOMIC.</p>
-                <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 rounded-pill border-0 primary-btn-shadow hover" href="#!" role="button" style="background-color: #f7922e; color: white">Lihat Testimoni</a>
+                <a class="btn btn-primary btn-lg me-md-4 mb-md-0 rounded-pill border-0 primary-btn-shadow hover" href="#!" role="button" style="background-color: #f7922e; color: white">Lihat Testimoni</a>
               </div>
             </div>
-            <div class="col-lg-1"></div>
+            <!-- <div class="col-lg-1"></div>
             <div class="col-lg-6">
               <div class="pe-7 ps-5 ps-lg-0">
                 <div class="text-end">
                   <!-- <img class="pt-7 pt-md-0 hero-img" src="assets/img/hp-niomic.png" alt="hero-header" /> -->
-                  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <!-- <img src="..." class="d-block w-100" alt="..."> -->
-                        
-                      </div>
-                      <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
+                  <!-- carouse; -->
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <!-- end of .container-->
@@ -486,7 +460,7 @@
                 
                   <!-- <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/sistem+belajar/c-akses-materi.png" alt="Icon" class="icon icon-lg" style="width: 30%; height: 20%" /> -->
                     <div class="">
-                      <table class="table table-hover table-borderless fs-1">
+                      <table class="table table-borderless fs-1">
                         <thead>
                           <tr>
                             <th scope="col">Gelombang</th>
@@ -502,14 +476,15 @@
                             <td>31 Januari 2022</td>
                             <td>Aktif Permanen</td>
                             <td>Dibuka</td>
-                            <td class="fw-medium" >
+                            <td class="fw-medium hover-x" >
                               <a href="#" style="color:#f7922e">
-                                Daftar Sekarang
+                                Daftar Sekarang<span style="display: inline-block; width: 1ch;">&#9;</span>
                               </a>
+                              <i class="fas fa-arrow-right align-content-center mt-2 fs--1" style="color:#f7922e"></i>
                             </td>
                           </tr>
                           <tr class="col-md-2">
-                            <th scope="row" class="fw-medium" style="color:#f7922e">Batch 1221</th>
+                            <th scope="row" class="fw-medium" style="color:#f7922e;">Batch 1221</th>
                             <td>31 Desember 2021</td>
                             <td>Aktif Permanen</td>
                             <td>Learning</td>
@@ -568,9 +543,9 @@
                   class="text-capitalize fs-xl-10 mb-7"
                   style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
                 >
-                Daftar dulu aja
+                Daftar dulu aja !
                 </h1>
-                <p class="fs-2 mb-7 fw-medium">akan ada banyak manfaat yang akan kamu dapatkan</p>
+                <p class="fs-1 mb-7 fw-medium">akan ada banyak manfaat yang akan kamu dapatkan</p>
                 <a class="btn btn-primary btn-lg me-md-4 mb-5 mb-md-0 border-0 rounded-pill primary-btn-shadow hover" href="#!" role="button" style="background-color: #f7922e; color: white">Daftar Sekarang</a>
               </div>
             </div>
