--- a/public/index.html
+++ b/public/index.html
@@ -441,7 +441,7 @@
 
       <!-- ================================================== -->
 
-      <section class="pt-5 pt-md-9" id="service">
+      <section class="pt-5 pt-md-9" id="service" >
         <section class="container">
           <div class="position-absolute z-index--1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
           <div class="mb-7 text-center">
@@ -454,7 +454,7 @@
             </h3>
             <!-- <p class="fs-2 mb-4 py-5 fw-medium text-center">Lulusan kami telah bekerja di lebih dari 100 perusahaan di seluruh Indonesia.</p> -->
           </div>
-          <div class="row justify-content-center align-items-center">
+          <div class="row d-flex justify-content-center align-items-center">
             <div class="col-xl-10 col-lg-11">
               
                 
@@ -483,28 +483,28 @@
                               <i class="fas fa-arrow-right align-content-center mt-2 fs--1" style="color:#f7922e"></i>
                             </td>
                           </tr>
-                          <tr class="col-md-2">
+                          <tr class="col-md-5">
                             <th scope="row" class="fw-medium" style="color:#f7922e;">Batch 1221</th>
                             <td>31 Desember 2021</td>
                             <td>Aktif Permanen</td>
                             <td>Learning</td>
                             <td style="color:#f7922e">Close</td>
                           </tr>
-                          <tr>
+                          <tr class="col-md-5">
                             <th scope="row" class="fw-medium" style="color:#f7922e">Batch 1121</th>
                             <td>30 November 2021</td>
                             <td>Aktif Permanen</td>
                             <td>Learning</td>
                             <td style="color:#f7922e">Close</td>
                           </tr>
-                          <tr>
+                          <tr class="col-md-5">
                             <th scope="row" class="fw-medium" style="color:#f7922e">Batch 1021</th>
                             <td>31 Oktober 2021</td>
                             <td>Aktif Permanen</td>
                             <td>Learning</td>
                             <td style="color:#f7922e">Close</td>
                           </tr>
-                          <tr>
+                          <tr class="col-md-5">
                             <th scope="row" class="fw-medium" style="color:#f7922e">Batch 69</th>
                             <td>11 Oktober 2021</td>
                             <td>Aktif Permanen</td>
@@ -517,7 +517,7 @@
                       </table>
 
                       <div class="row text-center m-5">
-                        <p class="fs-1 mb-4 py-5 fw-medium text-center">Lihat lengkap 73 batch sebelumnya? <a href="modal.html" style="color: #f7922e; text-decoration: none">Klik Disini</a></p>
+                        <p class="fs-1 mb-4 py-5 fw-medium text-center">Lihat lengkap 73 batch sebelumnya? <a href="list-pendaftaran.html" style="color: #f7922e; text-decoration: none">Klik Disini</a></p>
                       </div>
 
                     </div>
