--- a/public/modal.html
+++ b/public/modal.html
@@ -476,72 +476,75 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section class="pb-0 pb-lg-4">
-        <div class="container text-justify">
-          <div class="row">
-            <div class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0">
-              <img class="mb-4" src="assets/img/logo-niomic-black-.png" width="150" alt="jadoo" />
-              <p class="fs--1 fw-medium" href="#!">Payment Partner : <br> BRI, BCA, Mandiri, BNI, Permata, Indomaret, Alfamart, Alfamidi, DanDan, Akulaku, Credit Card, OVO, Dana, ShopeePay, Gopay, Linkaja & Tokopedia</p>
-            </div>
-            <div class="col-lg-3 col-md-4 mb-4 mb-lg-0 order-lg-1 order-md-2">
-              <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Official Office</h4>
-              <ul class="list-unstyled mb-0">
-                <li class="mb-2">
-                  <p class="fs--1 fw-medium text-decoration-none">
-                    NIOMIC - PT CERDASKAN GENERASI BANGSA<br class="d-none d-xl-block" /><br class="d-none d-xl-block" />
-                    Centennial Tower Level 29, Jl. Jendral Gatot Subroto Kav. 24-25 Unit D-E, RT. 2 / RW. 2, Karet Semanggi, Setiabudi, Jakarta Selatan, DKI Jakarta, Indonesia 12950
-                  </p>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-1 col-md-4 mb-4 mb-lg-0 order-lg-2 order-md-3">
-              <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Pages</h4>
-              <ul class="list-unstyled mb-0">
-                <li class="mb-2"><a class="link-900 fs--1 fw-medium text-decoration-none" href="#!">Career</a></li>
-                <li class="mb-2"><a class="link-900 fs--1 fw-medium text-decoration-none" href="#!">Testimoni</a></li>
-                <li class="mb-2"><a class="link-900 fs--1 fw-medium text-decoration-none" href="#!">FAQ</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-3 order-md-4">
-              <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Hubungi Kami</h4>
-              <ul class="list-unstyled mb-0">
-                <li class="mb-2">
-                  <p class="fs--1 fw-medium">
-                    Whatsapp : 0852-1660-1682<br class="d-none d-xl-block" />
-                    Email : hello@niomic.com<br class="d-none d-xl-block" />
-                    Telp : 0725-7648158<br class="d-none d-xl-block" />
-                  </p>
-                </li>
-                <li class="mb-2"></li>
-              </ul>
-            </div>
-            <div class="col-lg-3 col-md-5 col-12 mb-4 mb-md-6 mb-lg-0 order-lg-4 order-md-1">
-              <div class="icon-group mb-4">
-                <a class="text-decoration-none icon-item shadow-social" id="facebook" href="#!"><i class="fab fa-facebook-f"> </i></a
-                ><a class="text-decoration-none icon-item shadow-social" id="instagram" href="#!"><i class="fab fa-instagram"> </i></a
-                ><a class="text-decoration-none icon-item shadow-social" id="twitter" href="#!"><i class="fab fa-twitter"> </i></a>
-                <a class="text-decoration-none icon-item shadow-social" id="youtube" href="#!"><i class="fab fa-youtube"> </i></a>
+        <section class="pb-0 pb-lg-4">
+          <div class="container text-justify">
+            <div class="row">
+              <div class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0">
+                <img class="mb-4" src="assets/img/logo-niomic-black-.png" width="150" alt="jadoo" />
+                <p class="fs--1 fw-medium" href="#!">
+                  Payment Partner : <br />
+                  BRI, BCA, Mandiri, BNI, Permata, Indomaret, Alfamart, Alfamidi, DanDan, Akulaku, Credit Card, OVO, Dana, ShopeePay, Gopay, Linkaja & Tokopedia
+                </p>
               </div>
-              <div class="icon-group mb-4">
-                <a class="text-decoration-none icon-item shadow-social" id="tiktok" href="#!"><i class="fab fa-tiktok"> </i></a
-                ><a class="text-decoration-none icon-item shadow-social" id="spotify" href="#!"><i class="fab fa-spotify"> </i></a
-                ><a class="text-decoration-none icon-item shadow-social" id="linkedin" href="#!"><i class="fab fa-linkedin"> </i></a>
+              <div class="col-lg-3 col-md-4 mb-4 mb-lg-0 order-lg-1 order-md-2">
+                <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Official Office</h4>
+                <ul class="list-unstyled mb-0">
+                  <li class="mb-2">
+                    <p class="fs--1 fw-medium text-decoration-none">
+                      NIOMIC - PT CERDASKAN GENERASI BANGSA<br class="d-none d-xl-block" /><br class="d-none d-xl-block" />
+                      Centennial Tower Level 29, Jl. Jendral Gatot Subroto Kav. 24-25 Unit D-E, RT. 2 / RW. 2, Karet Semanggi, Setiabudi, Jakarta Selatan, DKI Jakarta, Indonesia 12950
+                    </p>
+                  </li>
+                </ul>
               </div>
-              <h4 class="fw-medium font-sans-serif text-secondary mb-3">Temukan Aplikasi Kami</h4>
-              <div class="d-flex align-items-center">
-                <a href="#!"> <img class="me-2" src="assets/img/play-store.png" alt="play store" /></a>
+              <div class="col-lg-1 col-md-4 mb-4 mb-lg-0 order-lg-2 order-md-3">
+                <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Pages</h4>
+                <ul class="list-unstyled mb-0">
+                  <li class="mb-2"><a class="link-900 fs--1 fw-medium text-decoration-none" href="#!">Career</a></li>
+                  <li class="mb-2"><a class="link-900 fs--1 fw-medium text-decoration-none" href="#!">Testimoni</a></li>
+                  <li class="mb-2"><a class="link-900 fs--1 fw-medium text-decoration-none" href="#!">FAQ</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-3 order-md-4">
+                <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Hubungi Kami</h4>
+                <ul class="list-unstyled mb-0">
+                  <li class="mb-2">
+                    <p class="fs--1 fw-medium">
+                      Whatsapp : 0852-1660-1682<br class="d-none d-xl-block" />
+                      Email : hello@niomic.com<br class="d-none d-xl-block" />
+                      Telp : 0725-7648158<br class="d-none d-xl-block" />
+                    </p>
+                  </li>
+                  <li class="mb-2"></li>
+                </ul>
+              </div>
+              <div class="col-lg-3 col-md-5 col-12 mb-3 mb-md-6 mb-lg-0 order-lg-4 order-md-1">
+                <div class="icon-group mb-4">
+                  <a class="text-decoration-none icon-item shadow-social" id="facebook" href="#!"><i class="fab fa-facebook-f"> </i></a
+                  ><a class="text-decoration-none icon-item shadow-social" id="instagram" href="#!"><i class="fab fa-instagram"> </i></a
+                  ><a class="text-decoration-none icon-item shadow-social" id="twitter" href="#!"><i class="fab fa-twitter"> </i></a>
+                  <a class="text-decoration-none icon-item shadow-social" id="youtube" href="#!"><i class="fab fa-youtube"> </i></a>
+                </div>
+                <div class="icon-group mb-4">
+                  <a class="text-decoration-none icon-item shadow-social" id="tiktok" href="#!"><i class="fab fa-tiktok"> </i></a
+                  ><a class="text-decoration-none icon-item shadow-social" id="spotify" href="#!"><i class="fab fa-spotify"> </i></a
+                  ><a class="text-decoration-none icon-item shadow-social" id="linkedin" href="#!"><i class="fab fa-linkedin"> </i></a>
+                </div>
+                <h4 class="fw-medium font-sans-serif text-secondary mb-3">Temukan Aplikasi Kami</h4>
+                <div class="d-flex align-items-center">
+                  <a href="#!"> <img class="me-2" src="assets/img/play-store.png" alt="play store" /></a>
+                </div>
               </div>
             </div>
           </div>
+          <!-- end of .container-->
+        </section>
+        <!-- <section> close ============================-->
+        <!-- ============================================-->
+  
+        <div class="py-3 text-center">
+          <p class="mb-0 text-secondary fs--1 fw-medium">© 2021 PT. Cerdaskan Generasi Bangsa. All Rights Reserved.</p>
         </div>
-        <!-- end of .container-->
-      </section>
-      <!-- <section> close ============================-->
-      <!-- ============================================-->
-
-      <div class="py-5 text-center">
-        <p class="mb-0 text-secondary fs--1 fw-medium">© 2021 PT. Cerdaskan Generasi Bangsa. All Rights Reserved.</p>
-      </div>
     </main>
     <!-- ===============================================-->
     <!--    End of Main Content-->
